Fix bug with conflict between opencv and av (a djitellopy dependency) by importing opencv first and creating a window before importing djitellopy. Add quickstart example script.

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,3 +5,6 @@ ignore_missing_imports = True
 
 [mypy-djitellopy.*]
 ignore_missing_imports = True
+
+[mypy-dt_apriltags.*]
+ignore_missing_imports = True
