--- a/mypy.ini
+++ b/mypy.ini
@@ -8,3 +8,6 @@ ignore_missing_imports = True
 
 [mypy-dt_apriltags.*]
 ignore_missing_imports = True
+
+[mypy-matplotlib.*]
+ignore_missing_imports = True
