--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     rev: 23.7.0
     hooks:
       - id: black
+        args: [--line-length=79]
 -   repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
