--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tellox"
-version = "0.1.3"
+version = "0.2.0"
 description = "The easy way to control a DJI Tello drone."
 readme = "README.md"
 authors = ["Charles Dawson <charles.dwsn@gmail.com>"]
@@ -13,7 +13,7 @@ classifiers = [
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9, <3.13"
 numpy = "^1.25.2"
 opencv-python = "^4.8.0.76"
 pandas = "^2.0.3"
